# UOFlow

./: .gitignore  AGENTS.md  Anarchy  README.md  READMEClientPatch.md  TODO.md  TODOClientPatch.md  TODORefactor.md  TempOld.txt  build_release.bat  luaplus.deffindstr  temp.txt  uosa notes.txt
UOFlow/: Interface.lua  Interface.xml  _G Dump.txt
UOFlow/DataInterface/Default/UO_ChatWindow/: ChatSettings.lua
UOFlow/Icons/: icons.xml
UOFlow/Icons/Buffs_Debuffs/green/: 00049986_chalice_of_pilfering_protection.dds
UOFlow/Source/: Actions.lua  BookTemplate.lua  BookTemplate.xml  BuffDebuffWindow.lua  CharacterSummary.lua  CharacterSummaryWindow.lua  CharacterSummaryWindow.xml  ContainerWindow.lua  ContainersInfo.lua  CoreWindowTemplates.xml  Debug.lua  DebugWindow.lua  DebugWindow.xml  GenericGump.lua  GumpsParsing.lua  ItemProperties.lua  PartyHealthBar.lua  SampleWindow.xml  TargetWindow.lua  TextParsing.lua  TradeWindow.lua  TradeWindow.xml  UOFlowStatus.lua  UOFlowStatus.lua.bak  UOFlowStatus.lua.bakNew  UOFlowStatus.xml  UOFlowStatus.xml.bak  VendorSearch.lua  VendorSearch.xml  VisualProgrammingInterface.lua  VisualProgrammingInterface.xml  WindowUtils.lua  mainmenuwindow.lua  mainmenuwindow.xml  settingswindow.lua  settingswindow.xml  spellbook.lua
UOFlow/Source/UOFlow/: UOFlowStatus.lua  UOFlowStatus.xml  VisualProgramming.lua  VisualProgramming.xml  VisualProgrammingActions.lua  VisualProgrammingBlock.lua  VisualProgrammingConfig.lua  VisualProgrammingConfig.xml  VisualProgrammingCore.lua  VisualProgrammingEvents.lua  VisualProgrammingExecution.lua  VisualProgrammingExecutionBlocks.lua  VisualProgrammingExecutionCore.lua  VisualProgrammingExecutionFlow.lua  VisualProgrammingExecutionTimer.lua  VisualProgrammingManager.lua  VisualProgrammingTimer.lua  VisualProgrammingTypes.lua
UOFlow/Textures/: CoreTextures.xml
UOFlow/UO_ChatWindow/Source/: ChatWindow.lua
UOWalkPatch/: .gitignore  CMakeLists.txt  README-Stage3.md  README.md  UOWalkPatchDLL.manifest.in  command_list.json  directions.json  exports.def  luaplus.def  luaplus_1100.exports.txt  signatures.json  uowalkpatch.cfg  vcpkg.json
UOWalkPatch/build-codex/: ALL_BUILD.vcxproj  DumpAnalyzer.vcxproj  UOInjector.vcxproj  UOWalkPatch.sln  UOWalkPatchDLL.vcxproj  ZERO_CHECK.vcxproj  luaplus_import_lib.vcxproj
UOWalkPatch/build-msvc/: ALL_BUILD.vcxproj  DumpAnalyzer.vcxproj  UOInjector.vcxproj  UOWalkPatch.sln  UOWalkPatchDLL.vcxproj  ZERO_CHECK.vcxproj  luaplus_import_lib.vcxproj
UOWalkPatch/docs/: README_Casting.md
UOWalkPatch/ghidra_scripts/: DumpMovementInfo.java
UOWalkPatch/include/: stub_bin.h
UOWalkPatch/include/Core/: ActionTrace.hpp  Bind.hpp  Config.hpp  CoreFlags.hpp  CrashHandler.hpp  EarlyTrace.hpp  Logging.hpp  MinHookHelpers.hpp  PatternScan.hpp  RejectCache.hpp  SafeMem.h  SendRing.hpp  Startup.hpp  TrustedEndpointCache.hpp  Utils.hpp
UOWalkPatch/include/Engine/: CastFallback.hpp  GlobalState.hpp  LuaBridge.hpp  LuaStateRegistry.hpp  Movement.hpp
UOWalkPatch/include/Net/: PacketTrace.hpp  ScannerStage3.hpp  SendBuilder.hpp  SendSampleStore.hpp  SendTrace.hpp
UOWalkPatch/include/Util/: OwnerPump.hpp  RegionWatch.hpp
UOWalkPatch/include/Walk/: WalkController.hpp  WalkController.hpp.bak
UOWalkPatch/include/uow/: TailFollowScanner.hpp  WalkController.hpp
UOWalkPatch/libs/: luaplus_1100.lib
UOWalkPatch/libs/luaplus/lua51-luaplus/src/: loadlib.c
UOWalkPatch/src/: CastCorrelator.cpp  CastCorrelator.h  SpellProbe.cpp  SpellProbe.h  SpellSenderDetour.cpp  SpellSenderDetour.h  TargetCorrelator.cpp  TargetCorrelator.h  bridges.asm  dllmain.cpp  injector.cpp  main.cpp  minhook.cpp  minhook.h  stub_bin_impl.cpp  stub_bin_templates.cpp
UOWalkPatch/src/Core/: ActionTrace.cpp  Bind.cpp  Config.cpp  CoreFlags.cpp  CrashHandler.cpp  EarlyTrace.cpp  Logging.cpp  MinHookHelpers.cpp  PatternScan.cpp  RejectCache.cpp  SafeMem.cpp  SendRing.cpp  Startup.cpp  TrustedEndpointCache.cpp  Utils.cpp
UOWalkPatch/src/Engine/: Addresses.h  CastFallback.cpp  GlobalState.cpp  LuaBridge.cpp  LuaStateRegistry.cpp  Movement.cpp  Movement.cpp.bak3  Movement.cpp.bak4  Movement.cpp.bak5  lua_safe.cpp  lua_safe.h
UOWalkPatch/src/Net/: NetCfgPivot.cpp  NetCfgPivot.h  PacketTrace.cpp  PacketTrace.cpp.bak  SendBuilder.cpp  SendDiscover.cpp  SendDiscover.h  SendSampleStore.cpp
UOWalkPatch/src/Util/: OwnerPump.cpp  RegionWatch.cpp
UOWalkPatch/src/Walk/: WalkController.cpp  WalkController.cpp.bak2  WalkController.cpp.bak6
UOWalkPatch/src/Win32/: SafeProbe.cpp  SafeProbe.h
UOWalkPatch/tests/: README.md  ScannerStage3Tests.cpp
UOWalkPatch/tools/: DumpAnalyzer.cpp
docs/: CODEX_RULES.md
notes/: uosa_notes.txt  walk_crash_observations.txt
tmp/: InspectRegisterHelper.java  ghidra_inspect_register.py
tools/ghidra/: DumpFunctionsAt.java  DumpNativeContext.java  FindGateFunctions.java  FindGateFunctions.py  FindGateOffsetFunctions.java
